--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "bluebanner/rpc",
-    "description": "",
+    "description": "rpc",
+    "keywords": ["bluebanner", "rpc", "laravel"],
+    "license": "MIT",
     "authors": [
         {
             "name": "Mars Zhou",
@@ -8,12 +10,14 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=5.3.7",
         "illuminate/support": "4.0.x"
     },
     "autoload": {
         "classmap": [
-            "src/migrations"
+            "src/migrations",
+            "src/models",
+            "src/controllers"
         ],
         "psr-0": {
             "Bluebanner\\Rpc": "src/"
